--- a/styles.css
+++ b/styles.css
@@ -139,15 +139,18 @@ body #calculator #buttonsContainer .btn:hover {
     overflow: hidden;
   }
   body #lightbulb {
+    position: absolute;
+    top: 4%;
+    right: 9%;
     width: 3rem;
   }
   body h1 {
     font-size: 3rem;
-    margin: .5rem;
+    margin: .5rem .5rem 1rem -4rem;
   }
   body #calculator {
     width: 90%;
-    height: 31rem;
+    height: 29rem;
   }
   body #calculator #calculatorDisplay {
     height: 4rem;
@@ -174,12 +177,12 @@ body #calculator #buttonsContainer .btn:hover {
         flex-wrap: wrap;
   }
   body #calculator #buttonsContainer #operators div {
-    height: 3rem;
+    height: 2.75rem;
   }
   body #calculator #buttonsContainer .btn {
     font-size: 2.5rem;
     min-width: 3.5rem;
-    height: 5rem;
+    height: 4.25rem;
     margin: .1rem;
     border: black solid;
     border-radius: .25rem;
