--- a/_index.scss
+++ b/_index.scss
@@ -23,8 +23,8 @@ body {
         }
 
         h1{
-            font-size: 5rem;
-            margin: 0;
+            font-size: 4rem;
+            margin: 1rem;
             padding: 0;
             transition: .5s;
         }
@@ -33,8 +33,8 @@ body {
             background-color: gray;
             border: solid black;
             border-radius: 1rem;
-            width: 40%;
-            height: 35rem;
+            width: 32%;
+            height: 30rem;
         
             #calculatorDisplay {
                 background-color: #FFF5A3;
@@ -51,7 +51,7 @@ body {
             }
 
             #buttonsContainer{
-            padding: 0 2rem 1rem 2rem;
+            padding: 0 3rem 1rem 3rem;
             display: flex;
                 justify-content: center;
 
@@ -66,16 +66,16 @@ body {
                     display: flex;
                     flex-wrap: wrap;
                     div {
-                        height: 6.5rem;
+                        height: 4.85rem;
                     }
                 }
 
                 .btn {
                     font-size: 4rem;
                     background-color: lightgray;
-                    min-width: 4.5rem;
-                    height: 4.5rem;
-                    margin: .5rem;
+                    min-width: 3.5rem;
+                    height: 3.5rem;
+                    margin: .25rem;
                     border: black solid;
                     border-radius: .25rem;
                     cursor: pointer; 
