--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,8 @@ body #lightbulb:active {
 }
 
 body h1 {
-  font-size: 5rem;
-  margin: 0;
+  font-size: 4rem;
+  margin: 1rem;
   padding: 0;
   -webkit-transition: .5s;
   transition: .5s;
@@ -46,8 +46,8 @@ body #calculator {
   background-color: gray;
   border: solid black;
   border-radius: 1rem;
-  width: 40%;
-  height: 35rem;
+  width: 32%;
+  height: 30rem;
 }
 
 body #calculator #calculatorDisplay {
@@ -71,7 +71,7 @@ body #calculator #calculatorDisplay {
 }
 
 body #calculator #buttonsContainer {
-  padding: 0 2rem 1rem 2rem;
+  padding: 0 3rem 1rem 3rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,15 +99,15 @@ body #calculator #buttonsContainer #operators {
 }
 
 body #calculator #buttonsContainer #operators div {
-  height: 6.5rem;
+  height: 4.85rem;
 }
 
 body #calculator #buttonsContainer .btn {
   font-size: 4rem;
   background-color: lightgray;
-  min-width: 4.5rem;
-  height: 4.5rem;
-  margin: .5rem;
+  min-width: 3.5rem;
+  height: 3.5rem;
+  margin: .25rem;
   border: black solid;
   border-radius: .25rem;
   cursor: pointer;
