--- a/_index.scss
+++ b/_index.scss
@@ -66,12 +66,12 @@ body {
                     display: flex;
                     flex-wrap: wrap;
                     div {
-                        height: 4.85rem;
+                        height: 4.9rem;
                     }
                 }
 
                 .btn {
-                    font-size: 4rem;
+                    font-size: 2.75rem;
                     background-color: lightgray;
                     min-width: 3.5rem;
                     height: 3.5rem;
@@ -83,7 +83,8 @@ body {
                         justify-content: center;
                         align-items: center;
 
-                        &:hover {
+                        &:active {
+                            border:  black solid 2px;
                             opacity: 75%;
                         }
                 }
