--- a/styles.css
+++ b/styles.css
@@ -99,11 +99,11 @@ body #calculator #buttonsContainer #operators {
 }
 
 body #calculator #buttonsContainer #operators div {
-  height: 4.85rem;
+  height: 4.9rem;
 }
 
 body #calculator #buttonsContainer .btn {
-  font-size: 4rem;
+  font-size: 2.75rem;
   background-color: lightgray;
   min-width: 3.5rem;
   height: 3.5rem;
@@ -122,7 +122,8 @@ body #calculator #buttonsContainer .btn {
           align-items: center;
 }
 
-body #calculator #buttonsContainer .btn:hover {
+body #calculator #buttonsContainer .btn:active {
+  border: black solid 2px;
   opacity: 75%;
 }
 
@@ -177,7 +178,7 @@ body #calculator #buttonsContainer .btn:hover {
         flex-wrap: wrap;
   }
   body #calculator #buttonsContainer #operators div {
-    height: 2.75rem;
+    height: 2.55rem;
   }
   body #calculator #buttonsContainer .btn {
     font-size: 2.5rem;
@@ -199,6 +200,9 @@ body #calculator #buttonsContainer .btn:hover {
   }
   body #calculator #buttonsContainer .btn:hover {
     opacity: 75%;
+  }
+  body #calculator #buttonsContainer .btn:active {
+    color: red;
   }
   .darkMode {
     background-color: #211e35;
