--- a/_index.scss
+++ b/_index.scss
@@ -38,7 +38,7 @@ body {
         
             #calculatorDisplay {
                 background-color: #FFF5A3;
-                border: black solid;
+                border: solid black 3px;
                 height: 6rem;
                 width: 80%;
                 margin: 2rem auto;
