--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body #calculator {
 
 body #calculator #calculatorDisplay {
   background-color: #FFF5A3;
-  border: black solid;
+  border: solid black 3px;
   height: 6rem;
   width: 80%;
   margin: 2rem auto;
